Prevent multiple underlines
Abbreviations, by default, have an underline that we don't currently style. Users might see a double underline when it overlaps with a link, which has its underline offset slightly. (This doesn't seem to happen with the Plex font, but it does with fallback fonts.)

Refs #454

--- a/assets/style.css
+++ b/assets/style.css
@@ -95,6 +95,10 @@ summary {
       text-decoration-skip-ink: none;
       text-decoration-skip: none;
     }
+
+    & abbr {
+      text-decoration-line: none;
+    }
   }
 }
 
